# airflip

./: .gitignore  README.md  docker-compose.yml  package.json
backend/: Dockerfile  Dockerfile_migrate  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d646289a72c2_initial_migration.py
backend/api/v1/: account.py  bonus_level.py  transaction.py
backend/core/: settings.py
backend/db/models/: models.py
backend/schemes/: account.py  bonus_level.py  transaction.py
backend/services/: account.py  bonus_level.py  main_service.py  transaction.py
backend/storages/: cache.py
backend/tests/: conftest.py
backend/tests/test_func/test_api/: test_account.py  test_bonus_level.py  test_transaction.py
backend/tests/test_func/test_storages/: test_cache.py
config/backend/: .env_prod_example  .env_test_example  env_example
config/nginx/: backend.conf  nginx.conf
config/pg_database/: env_example
frontend/: COLOR_MIGRATION.md  docker-compose.yml  dockerfile  index.html  knip.json  package.json  unused-analysis-2025-05-28.md
frontend/modules/: portfolio.puml  strategies.puml  tokens.puml  transaction-block.puml
frontend/public/comics/: 1_Animation_mis.json  1_animation.json  1_animation_reverse.json  2_Animation_mis.json  (+19 more)
frontend/src/: App.tsx  main.tsx
ionic/: README.md  capacitor.config.ts  components.json  index.html  knip.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  winbox.d.ts
ionic/docs/: IONIC_MIGRATION_PLAN.md
ionic/scripts/: analyze-unused.cjs
ionic/src/: App.tsx  index.tsx
(+224 files in other folders)
